# mlops-assignment-hw3

./: Dockerfile.vllm  REPORT.md  docker-compose.yml  pyproject.toml  setup.txt
agent/: graph.py  prompts.py  server.py
evals/: eval_set.jsonl  run_eval.py
infra/: prometheus.yml
infra/grafana/provisioning/dashboards/: serving.json
load_test/: perf_pool.jsonl
scripts/: fire_traces.py  manual_query.py  start_vllm.sh
